# Copilotkit_B2B_Sales_Automation_Agent

./: README.md  bun.lockb  package.json  tailwind.config.js  test.py
agent/: .gitignore  pyproject.toml  requirements.txt  temp_markdown.md
agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/sample_agent/: agent.py  graph.py  main.py  nodes.py  prompts.py  state.py  utils.py
agent/sample_agent/tools/: company_research.py  google_docs_tools.py  lead_research.py  rag_tool.py
agent/sample_agent/tools/base/: gmail_tools.py  linkedin_tools.py  search_tools.py
agent/sample_agent/tools/leads_loader/: google_sheets.py  hubspot.py  lead_loader_base.py
app/copilotkit/: page.tsx  styles.css
app/types/: sales_agent_types.ts
